<resources>
    <string name="app_name">AthleteXperience</string>
    <string name="username">Username</string>
    <string name="password">Contraseña</string>
    <string name="loggin">LOGIN</string>
    <string name="login">Login</string>
    <string name="Register">Registrar</string>
    <string name="athletexperience">AthleteXperience</string>
    <string name="email">Email</string>
    <string name="proveedor">Proveedor</string>
    <string name="cerrarSesion">Cerrar Sesion</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="perdergrasa">Perder Grasa</string>
    <string name="perdergrasadescripcion">Máximiza la pérdida de grasa y conserva tu masa muscular</string>
    <string name="mantenerpeso">Mantener Peso</string>
    <string name="mantenerpesodescripcion">Conserva tu estado físico y mantente saludable</string>
    <string name="ganarmusculo">Ganar Músculo</string>
    <string name="ganarmusculodescripcion">Incrementa tu masa muscular y vuélvete más fuerte</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="default_web_client_id" translatable="false">780115247992-me0fulp2uo7ita89889lnclnhk6f0277.apps.googleusercontent.com</string>
    <string name="objetivo">¿Cuál es tu objetivo?</string>
    <string name="fechaNacimiento">Fecha de nacimiento</string>
    <string name="altura">Altura</string>
    <string name="pesoAcutal">Peso Actual</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="resumen">RESUMEN</string>
    <string name="imc">Actual IMC</string>
    <string name="calorias">Calorias</string>
    <string name="macronutrientes">Macronutrientes</string>
    <string name="crearPlan">Crear Plan</string>
    <string name="imc_result">Tu IMC es: %.2f</string>
    <string name="calorias_result">Calorías requeridas: %d</string>
    <string name="macronutrientes_result">Macronutrientes necesarios: %s</string>
    <string name="actividad">Actividad Física</string>
    <string name="selecioneTuActividad">¿Cuál es tu nivel de actividad física?</string>
    <string name="sedentario">Sedentario</string>
    <string name="sedentarioText">Nada o poco ejercicio</string>
    <string name="ligera">Ligera</string>
    <string name="ligeraText">Ejercicio 2-3 días por semana</string>
    <string name="moderado">Moderado</string>
    <string name="moderadoText">Ejercicio 4-5 días por semana</string>
    <string name="alta">Alta</string>
    <string name="altaText">Ejercicio 6-7 días por semana</string>
    <string name="atletaProfesional">Atleta profesional</string>
    <string name="atletaProfesionalText">Ejercicio intenso 6-7 días por semana</string>
    <string name="signin">Iniciar sesión</string>
    <string name="signup">Registrarte</string>
    <string name="google">Google</string>
    <string name="EscribeCorreo">Escribe tu correo</string>
    <string name="EscribeContraseña">Escribe tu contraseña</string>
    <string name="ConfirmaContraseña">Repite la contraseña</string>
    <string name="tengoCuenta">Ya estoy registrado, Inicia sesión!</string>
    <string name="borrar_nota">Borrar Nota</string>
    <string name="guardar_nota">Guardar nota</string>
    <string name="escribe_una_nota">Escribe una nota</string>
    <string name="crearRutina">Rutina nueva</string>
    <string name="inicio">Rutinas</string>
    <string name="Mapa">Mapa</string>
    <string name="google_map_api_key">AIzaSyASbxbaGkkiaN0_xkmz2x3mYuY8hxSsxEI</string>
    <string name="menos">---</string>
    <string name="veinte">20</string>
    <string name="peso">Peso (kg):</string>
    <string name="repeticiones">Reps:</string>
    <string name="guardar">Guardar</string>
    <string name="borrar">Borrar</string>
    <string name="micuenta">Mi cuenta</string>
    <string name="ActualizarPerfil">Actualizar perfil</string>
    <string name="Escribetelf">Escribe tu teléfono</string>
    <string name="EscribeNombre">Escribe tu nombre</string>
    <string name="Rutinas">Rutinas</string>
    <string name="Notas">Notas</string>
    <string name="Perfil">Perfil</string>
    <string name="Valoranos" />
    <string name="valoraci_n">Valoración</string>
    <string-array name="cities_array">
        <item>Madrid</item>
        <item>Barcelona</item>
        <item>Valencia</item>
    </string-array>
</resources>