<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/black"
    android:padding="20dp">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bt_back_actividad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:src="@drawable/ic_arrowback"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="55dp">

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="5dp"
            android:layout_marginEnd="5dp"
            app:cardBackgroundColor="@color/orangeDark"/>

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="5dp"
            android:layout_marginEnd="5dp"
            app:cardBackgroundColor="@color/orange" />

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="5dp"
            android:layout_marginEnd="5dp"
            app:cardBackgroundColor="@color/orangeDark"/>

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="5dp"
            app:cardBackgroundColor="@color/orangeDark" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecioneTuActividad"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="23sp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_sedentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/orange"
        app:cardCornerRadius="10dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sedentario"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="23sp"
                    android:paddingBottom="5dp"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sedentarioText"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:textSize="16sp"/>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_ligera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/orange"
        app:cardCornerRadius="10dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ligera"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="23sp"
                    android:paddingBottom="5dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ligeraText"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_gravity="center"/>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_moderado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/orange"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moderado"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="23sp"
                    android:paddingBottom="5dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moderadoText"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_gravity="center"/>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_alta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/orange"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alta"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="23sp"
                    android:paddingBottom="5dp"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/altaText"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_gravity="center"/>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_atletaProfesional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/orange"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/atletaProfesional"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="23sp"
                    android:paddingBottom="5dp"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/atletaProfesionalText"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_gravity="center"/>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>