<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/black"
    android:padding="20dp">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bt_back_objetive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:src="@drawable/ic_arrowback"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="55dp">


        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="5dp"
            android:layout_marginEnd="5dp"
            app:cardBackgroundColor="@color/orangeDark" />

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="5dp"
            android:layout_marginEnd="5dp"
            app:cardBackgroundColor="@color/orangeDark"/>

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="5dp"
            app:cardBackgroundColor="@color/orange" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resumen"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="27sp"
        android:layout_marginBottom="20dp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_imc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="10dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/icon_imc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imc"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="23sp"
                    android:paddingBottom="5dp"/>

                <TextView
                    android:id="@+id/tv_imc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/perdergrasadescripcion"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_mantenerpeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="10dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/icon_fuego" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calorias"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="23sp"
                    android:paddingBottom="5dp"/>

                <TextView
                    android:id="@+id/tv_calorias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mantenerpesodescripcion"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_ganarmusculo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/icon_macronutrientes" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/macronutrientes"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="23sp"
                    android:paddingBottom="5dp"/>

                <TextView
                    android:id="@+id/tv_macronutrientes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ganarmusculodescripcion"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/bt_crearplan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            android:text="@string/crearPlan" />
    </LinearLayout>

</LinearLayout>