<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/black"
    android:padding="20dp">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bt_back_objetive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:src="@drawable/ic_arrowback"
        />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="55dp">


    <androidx.cardview.widget.CardView
        android:layout_width="50dp"
        android:layout_height="5dp"
        android:layout_marginEnd="5dp"
        app:cardBackgroundColor="@color/orange" />

    <androidx.cardview.widget.CardView
        android:layout_width="50dp"
        android:layout_height="5dp"
        android:layout_marginEnd="5dp"
        app:cardBackgroundColor="@color/orangeDark"/>

    <androidx.cardview.widget.CardView
        android:layout_width="50dp"
        android:layout_height="5dp"
        app:cardBackgroundColor="@color/orangeDark" />

    <androidx.cardview.widget.CardView
        android:layout_width="50dp"
        android:layout_height="5dp"
        android:layout_marginEnd="5dp"
        app:cardBackgroundColor="@color/orangeDark"/>

</LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/objetivo"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="27sp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_perdergrasa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/orange"
        app:cardCornerRadius="10dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/icon_perdergrasa" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/perdergrasa"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="23sp"
                        android:paddingBottom="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/perdergrasadescripcion"
                        android:textColor="@color/white"
                        android:textSize="16sp"/>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_mantenerpeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/orange"
        app:cardCornerRadius="10dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/icon_mantenerpeso" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mantenerpeso"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="23sp"
                    android:paddingBottom="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mantenerpesodescripcion"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_ganarmusculo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/orange"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/icon_ganarmusculo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ganarmusculo"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="23sp"
                    android:paddingBottom="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ganarmusculodescripcion"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>